--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    tools:context=".MainActivity">
 
 
     <TextView
         android:id="@+id/setsTextView"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -20,17 +18,17 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:text="SETS"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/numberOfSetsTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/workoutIntervalTextView"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -38,7 +36,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:text="WORKOUT INTERVAL"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/workoutTimerTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -47,8 +47,6 @@
 
     <TextView
         android:id="@+id/restIntervalTextView"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -56,7 +54,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:text="REST INTERVAL"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/restIntervalTimerTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -65,8 +65,6 @@
 
     <TextView
         android:id="@+id/numberOfSetsTextView"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -74,7 +72,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:text="2"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/workoutIntervalTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -83,8 +83,6 @@
 
     <TextView
         android:id="@+id/restIntervalTimerTextView"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -92,7 +90,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="00:10"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -101,8 +101,6 @@
 
     <TextView
         android:id="@+id/workoutTimerTextView"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -110,7 +108,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:text="00:30"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/restIntervalTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -119,72 +119,72 @@
 
     <Button
         android:id="@+id/buttonSetsMinus"
-        android:tag="minus"
-        android:onClick="editSetNumber"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="96dp"
         android:foreground="@drawable/minus"
+        android:onClick="editSetNumber"
+        android:tag="minus"
         app:layout_constraintBottom_toBottomOf="@+id/numberOfSetsTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/numberOfSetsTextView" />
 
     <Button
         android:id="@+id/buttonSetsPlus"
-        android:tag="plus"
-        android:onClick="editSetNumber"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginEnd="96dp"
         android:foreground="@drawable/plus"
+        android:onClick="editSetNumber"
+        android:tag="plus"
         app:layout_constraintBottom_toBottomOf="@+id/numberOfSetsTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/numberOfSetsTextView" />
 
     <Button
         android:id="@+id/buttonWorkoutMinus"
-        android:tag="minus"
-        android:onClick="editWorkoutTimer"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="96dp"
         android:foreground="@drawable/minus"
+        android:onClick="editWorkoutTimer"
+        android:tag="minus"
         app:layout_constraintBottom_toBottomOf="@+id/workoutTimerTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/workoutTimerTextView" />
 
     <Button
         android:id="@+id/buttonWorkoutPlus"
-        android:tag="plus"
-        android:onClick="editWorkoutTimer"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginEnd="96dp"
         android:foreground="@drawable/plus"
+        android:onClick="editWorkoutTimer"
+        android:tag="plus"
         app:layout_constraintBottom_toBottomOf="@+id/workoutTimerTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/workoutTimerTextView" />
 
     <Button
         android:id="@+id/buttonRestMinus"
-        android:tag="minus"
-        android:onClick="editRestTimer"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="96dp"
         android:foreground="@drawable/minus"
+        android:onClick="editRestTimer"
+        android:tag="minus"
         app:layout_constraintBottom_toBottomOf="@+id/restIntervalTimerTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/restIntervalTimerTextView" />
 
     <Button
         android:id="@+id/buttonRestPlus"
-        android:tag="plus"
-        android:onClick="editRestTimer"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginEnd="96dp"
         android:foreground="@drawable/plus"
+        android:onClick="editRestTimer"
+        android:tag="plus"
         app:layout_constraintBottom_toBottomOf="@+id/restIntervalTimerTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/restIntervalTimerTextView" />
@@ -207,10 +207,21 @@
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-5128977529277778/7452132384"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-5128977529277778/7452132384"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Every 'Click' on Ads helps developer"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/adView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
